--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,7 @@ body {
   margin: 80px auto;
   border-radius: 20px;
   box-shadow: 2px 4px 6px rgba(28, 6, 49, 0.219);
+  padding: 10px;
 }
 .error {
   color: #9c3333;
