--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,7 @@ body {
 .container {
   width: 90%;
   max-width: 960px;
-  margin: 80px auto;
+  margin:auto;
   border-radius: 20px;
   box-shadow: 3px 6px 9px rgba(228, 200, 254, 0.219);
   padding: 10px;
